sonar-server/src/main/less/coding-rules.less
@import 'mixins';
@import 'variables';
@import 'navigator/config';

@facetsHeight: 40px;


.coding-rules-page {

  .navigator-results .spinner {
    margin: @navigatorPadding;
  }

}

.navigator-filter-query {
  min-width: 40em;
  padding: 0 5px;

  input {
    height: 80%;
    width: 100%;
    font-size: @baseFontSize;
    vertical-align: middle;
    vertical-align: -webkit-baseline-middle;
  }
}


/*
 * Detail
 */

.coding-rules-detail-header,
.coding-rules-detail-title {
  position: relative;
  margin-bottom: @navigatorPadding;
  line-height: 1.5;
  font-weight: bold;
}

.coding-rules-detail-header {
  margin-bottom: 0;
  padding-right: 100px;
  font-size: 18px;
}

.coding-rules-detail-title {
  display: inline-block;
  margin-top: 3 * @navigatorPadding;
  text-transform: uppercase;
}

.coding-rules-detail-permalink {
  position: absolute;
  top: 0; right: 0;
  font-size: @baseFontSize;
  font-weight: normal;
  text-decoration: none;
  .trans;

  &:hover { color: @highlighted; }
}

.coding-rules-detail-context {
  margin-bottom: @navigatorPadding;
  padding: @navigatorPadding / 2;
  border: 1px solid @contextBorder;
  background-color: @contextBackground;

  .coding-rules-detail-quality-profile { margin-left: 0; }
  .coding-rules-detail-quality-profile-name,
  .coding-rules-detail-quality-profile-severity,
  .coding-rules-detail-quality-profile-parameters,
  .coding-rules-detail-quality-profile-actions {
    vertical-align: middle;
  }
  .coding-rules-detail-quality-profile-name,
  .coding-rules-detail-quality-profile-severity {
    width: 1px;
    padding-right: @navigatorPadding;
    white-space: nowrap;
  }
  .coding-rules-detail-quality-profile-parameter {
    display: inline-block;
    vertical-align: middle;
    margin-right: @navigatorPadding;
    white-space: nowrap;

    .key, .value, .sep {
      display: inline-block;
      vertical-align: middle;
    }

    .value {
      max-width: 300px;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
    }
  }
  .coding-rules-detail-quality-profile-parameter + .coding-rules-detail-quality-profile-parameter { margin-top: 0; }
}

.coding-rules-detail-context-actions {

  padding: @navigatorPadding / 2;
  background-color: @contextBackground;
  border: 1px solid @contextBorder;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.coding-rules-detail-context-actions-quality-profile {
  vertical-align: middle;
  margin-right: @navigatorPadding;
  font-weight: bold;
}

.coding-rules-detail-context-actions-item {
  display: inline-block;
  vertical-align: middle;
  margin-right: @navigatorPadding;

  .limited {
    display: inline-block;
    vertical-align: middle;
    max-width: 180px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  .limited-big {
    max-width: 480px;
  }
}

.coding-rules-detail-properties {
  margin: @navigatorPadding 0;
  font-size: 0;
}

.coding-rules-detail-property {
  display: inline-block;
  vertical-align: middle;
  margin-right: 2 * @navigatorPadding;
  font-size: @smallFontSize;
  height: 22px;
  line-height: 22px;

  .select2-search-field { line-height: 1; }
}

.coding-rules-detail-tag + .coding-rules-detail-tag {
  margin-left: @navigatorPadding;
}

.coding-rules-detail-tags-change {
  cursor: pointer;

  &:hover {
    span { text-decoration: underline; }
  }
}

.coding-rules-detail-tag-edit {
  line-height: 1;
}

.coding-rules-detail-description {
  margin: 2 * @navigatorPadding 0;
}

.coding-rules-detail-description-extra {
  margin-top: -@navigatorPadding;
}

.coding-rules-detail-extend-description-form {
  margin: @navigatorPadding 0;
}

.coding-rules-detail-parameters {
  margin: @navigatorPadding 0 @navigatorPadding * 2;
}

.coding-rules-detail-parameter {
  margin: @navigatorPadding 0;
  font-size: 0;
}

.coding-rules-detail-parameter-name {
  display: inline-block;
  vertical-align: top;
  width: 20%;
  font-size: @baseFontSize;
  font-weight: normal;
  text-align: right;
}

.coding-rules-detail-parameter-description {
  display: inline-block;
  vertical-align: top;
  width: 80%;
  padding-left: 2 * @navigatorPadding;
  .box-sizing(border-box);
  font-size: @baseFontSize;
}

.coding-rules-detail-parameter-original {
  margin-left: @navigatorPadding;
  font-size: @smallFontSize;
}


// Quality Profiles
.coding-rules-detail-quality-profiles-section {

}

.coding-rules-detail-quality-profiles-header {
  margin-top: 3 * @navigatorPadding;
}

.coding-rules-detail-quality-profiles {
  font-size: 0;
}

.coding-rules-detail-quality-profile {
  margin-left: 2 * @navigatorPadding;
}

.coding-rules-detail-quality-profile + .coding-rules-detail-quality-profile {
  margin-top: @navigatorPadding;
  padding-top: @navigatorPadding;
  border-top: 1px solid @navigatorBorderLightColor;
}

.coding-rules-detail-quality-profile-name {
  vertical-align: top;
  width: 15%;
  font-weight: bold;
  white-space: nowrap;
}

.coding-rules-detail-quality-profile-severity {
  vertical-align: top;
  width: 10%;
}

.coding-rules-detail-quality-profile-parameters {
  vertical-align: top;
}

.coding-rules-detail-quality-profile-parameter + .coding-rules-detail-quality-profile-parameter {
  margin-top: 8px;
}

.coding-rules-detail-quality-profile-actions {
  vertical-align: top;
  width: 25%;
  text-align: right;
}

.coding-rules-detail-quality-profile-inheritance {
  margin-top: 4px;
  font-size: @smallFontSize;
  font-weight: normal;

  i {
    position: relative;
    top: -1px;
    font-size: @iconSmallFontSize;
  }
}

.coding-rules-detail-quality-profiles-activation {
  margin-top: -3px;
  margin-left: @navigatorPadding;
}


// Bulk Change
.coding-rules-bulk-change-dropdown {
  position: absolute;
  z-index: 10;
  width: 200px;
  border: 1px solid @navigatorBorderLightColor;
  .box-sizing(border-box);
  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
  background-color: #fff;
}

.coding-rules-bulk-change-dropdown-link {
  display: block;
  max-width: 190px;
  height: 30px;
  line-height: 30px;
  padding: 0 @navigatorPadding;
  font-size: @smallFontSize;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  .trans;

  &:hover { background-color: @navigatorBarBackground; }

  strong {
    font-weight: bold;
  }
}

